Thu Jun 08 08:40:12 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/convert.c:
	- backported patch by Nick Castellano, correctly convert dates in
	  January

Mon May 15 17:09:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c:
	- applied fixes from Charlene Herring (cf. "Problems when
	  using odbc : SQLPutData, SQLExecDirect,Decimals" 2006/05/14

Thu Apr 20 12:11:15 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/unittests/ct_dynamic.c: remove leak in test

Tue Apr 18 19:46:01 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/ct.c: fix double free for CS_COMMAND

Sun Apr 16 10:09:47 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS include/tds.h src/tds/locale.c src/tds/mem.c:
	- renamed char_set to server_charset in TDSLOCALE
	- added a client_charset to TDSLOCALE

Mon Apr 10 11:55:56 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/prepare_query.c:
	- backport small fix for constant parameters

Fri Mar 24 11:24:08 EST 2006	JK Lowden <jklowden@schemamania.org>
	* configure.in Update version to 0.64RC2

Fri Mar 24 16:33:13 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh misc/test-auto.sh misc/online.pl(added):
	- merged with CVS HEAD

Thu Mar 23 16:20:00 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/sql2tds.c src/odbc/unittests/earlybind.c:
	* src/odbc/unittests/norowset.c src/odbc/unittests/t0004.c:
	* src/odbc/unittests/tables.c src/tds/data.c:
	* src/tds/tds_checks.c:
	- fix for mssql 2005

Thu Mar 23 13:53:41 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/query.c: partially fix problems with mssql 2005

Tue Mar 21 13:22:07 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/native.c:
	- applied patch from Richard Krehbiel (cf "ODBC datetime literal issue")

Mon Mar 20 09:46:19 CET 2006	Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/full-test.sh misc/test-auto.sh: