@@ -1,3 +1,7 @@
+Thu Jun 08 10:18:50 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
+	* src/tds/unittests/t0007.c:
+	- improved to detect possible date problems
+
 Thu Jun 08 08:40:12 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
 	* src/tds/convert.c:
 	- backported patch by Nick Castellano, correctly convert dates in
